--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "78f02d39",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9f017187",
    "metadata": {},
    "outputs": [
@@ -29,12 +29,25 @@
       "- commission\n",
       "- eea\n",
       "- europarl\n",
-      "the search results page is: https://eur-lex.europa.eu/search.html?&lang=en&type=advanced&SUBDOM_INIT=LEGISLATION&DTS_SUBDOM=LEGISLATION&DTS_DOM=EU_LAW&textScope0=ti-te&andText0=sheep+wool&date0=ALL%3A13122024%7C13022025\n",
-      "search results: total pages found: 1\n",
-      "['https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32018R0848', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32025D0537', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32025D0536', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32025D0541', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32024R3103', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32022R2499', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32015R0220', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32024R2522', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32024R2746', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32024R3211']\n",
-      "Metadata saved to metadata_eurlex.json\n",
-      "Total legislation documents found: 10\n",
-      "Start scraping \n",
+      "the search results page is: https://www.europarl.europa.eu/thinktank/en/research/advanced-search/pdf?textualSearch=sheep+wool&startDate=13%2F12%2F2024&endDate=13%2F02%2F2025&publicationTypes=STUDY\n",
+      "Total pages: 1\n",
+      "Processing page: https://www.europarl.europa.eu/thinktank/en/research/advanced-search/pdf?textualSearch=sheep+wool&startDate=13%2F12%2F2024&endDate=13%2F02%2F2025&publicationTypes=STUDY\n",
+      "Saved temporary file: /var/folders/7m/clj7j5_92l54rl25p0cxf5540000gn/T/tmpi_hxuvzk.pdf\n",
+      "Document URLs: ['https://www.europarl.europa.eu/RegData/etudes/STUD/2024/760273/IPOL_STU(2024)760273_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/754467/EXPO_STU(2025)754467_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/754234/ECTI_STU(2025)754234_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/762853/EPRS_STU(2025)762853_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/762853/EPRS_STU(2025)762853(SUM01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/762853/EPRS_STU(2025)762853(ANN01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/762853/EPRS_STU(2025)762853(ANN02)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/754468/EXPO_STU(2025)754468_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_DE.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_ES.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_FR.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_IT.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_PL.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_DE.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_ES.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_FR.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_IT.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_PL.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(ANN01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2024/759322/IPOL_STU(2024)759322_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2024/762858/EPRS_STU(2024)762858_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2024/767500/IPOL_STU(2024)767500_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/765777/EPRS_STU(2025)765777_EN.pdf']\n",
+      "Saved temporary file: /var/folders/7m/clj7j5_92l54rl25p0cxf5540000gn/T/tmphgvtljwq.pdf\n",
+      "Metadata saved to metadata_europarl.json\n",
+      "Total downloadable documents found: 27\n",
+      "Start scraping\n",
+      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_DE.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_ES.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_EN.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_FR.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_FR.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_ES.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_EN.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_PL.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_IT.pdf\n",
+      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_PL.pdf\n",
       "Scraped files saved in: documents\n"
      ]
     }
