logging instead of printing

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -28,38 +28,32 @@
       "- eurlex\n",
       "- commission\n",
       "- eea\n",
-      "- europarl\n",
-      "the search results page is: https://www.europarl.europa.eu/thinktank/en/research/advanced-search/pdf?textualSearch=sheep+wool&startDate=13%2F12%2F2024&endDate=13%2F02%2F2025&publicationTypes=STUDY\n",
-      "Total pages: 1\n",
-      "Processing page: https://www.europarl.europa.eu/thinktank/en/research/advanced-search/pdf?textualSearch=sheep+wool&startDate=13%2F12%2F2024&endDate=13%2F02%2F2025&publicationTypes=STUDY\n",
-      "Saved temporary file: /var/folders/7m/clj7j5_92l54rl25p0cxf5540000gn/T/tmpi_hxuvzk.pdf\n",
-      "Document URLs: ['https://www.europarl.europa.eu/RegData/etudes/STUD/2024/760273/IPOL_STU(2024)760273_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/754467/EXPO_STU(2025)754467_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/754234/ECTI_STU(2025)754234_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/762853/EPRS_STU(2025)762853_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/762853/EPRS_STU(2025)762853(SUM01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/762853/EPRS_STU(2025)762853(ANN01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/762853/EPRS_STU(2025)762853(ANN02)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/754468/EXPO_STU(2025)754468_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_DE.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_ES.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_FR.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_IT.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759309/CASP_STU(2025)759309(SUM01)_PL.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_DE.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_ES.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_FR.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_IT.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(SUM01)_PL.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/759316/CASP_STU(2025)759316(ANN01)_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2024/759322/IPOL_STU(2024)759322_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2024/762858/EPRS_STU(2024)762858_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2024/767500/IPOL_STU(2024)767500_EN.pdf', 'https://www.europarl.europa.eu/RegData/etudes/STUD/2025/765777/EPRS_STU(2025)765777_EN.pdf']\n",
-      "Saved temporary file: /var/folders/7m/clj7j5_92l54rl25p0cxf5540000gn/T/tmphgvtljwq.pdf\n",
-      "Metadata saved to metadata_europarl.json\n",
-      "Total downloadable documents found: 27\n",
-      "Start scraping\n",
-      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_DE.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_ES.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_EN.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_FR.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_FR.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_ES.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_EN.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759316(SUM01)) - CASP_STU(2025)759316(SUM01)_PL.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_IT.pdf\n",
-      "Skipping duplicate document (ID: STU(2025)759309(SUM01)) - CASP_STU(2025)759309(SUM01)_PL.pdf\n",
-      "Scraped files saved in: documents\n"
+      "- europarl\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-04 16:57:12,505 [INFO] eur_lex.run_eur_lex: the search results page is: https://eur-lex.europa.eu/search.html?&lang=en&type=advanced&SUBDOM_INIT=LEGISLATION&DTS_SUBDOM=LEGISLATION&DTS_DOM=EU_LAW&textScope0=ti-te&andText0=sheep+wool&date0=ALL%3A13122024%7C13022025\n",
+      "2025-06-04 16:57:16,198 [INFO] scraper: Total pages: 1\n",
+      "2025-06-04 16:57:16,199 [INFO] scraper: Processing page: https://eur-lex.europa.eu/search.html?&lang=en&type=advanced&SUBDOM_INIT=LEGISLATION&DTS_SUBDOM=LEGISLATION&DTS_DOM=EU_LAW&textScope0=ti-te&andText0=sheep+wool&date0=ALL%3A13122024%7C13022025\n",
+      "2025-06-04 16:57:17,619 [INFO] scraper: Document URLs: ['https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32018R0848', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32025D0537', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32025D0536', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32025D0541', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32024R3103', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32022R2499', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32015R0220', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32024R2522', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32024R2746', 'https://eur-lex.europa.eu/legal-content/EN/TXT/HTML/?uri=CELEX:32024R3211']\n",
+      "2025-06-04 16:57:18,660 [INFO] metadata_schema: Metadata saved to metadata_eurlex.json\n",
+      "2025-06-04 16:57:18,661 [INFO] scraper: Total downloadable documents found: 10\n",
+      "2025-06-04 16:57:18,661 [INFO] scraper: Start scraping\n",
+      "2025-06-04 16:57:53,263 [INFO] eur_lex.run_eur_lex: Scraped files saved in: documents\n"
      ]
     }
    ],
    "source": [
-    "main.main()"
+    "main.main(log=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7cce565",
+   "id": "3c6bc498",
    "metadata": {},
    "outputs": [],
    "source": []
